# LEO-Satellite

./: .gitignore  CMakeLists.txt  README.md
include/: satellite_data.hpp
include/gnc/: attitude_controller.hpp
include/simulator/: sim_data.hpp  sim_runner.hpp
src/gnc/: attitude_controller.cpp
src/simulator/: sim_runner.cpp
